# ai--assistant

./: .env.template  .github_workflows_tests.yml  .gitignore  .replit  API_COMPLETE_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  AppSetup.iss  AppxManifest.xml  CLAUDE.md  CLEANUP_REPORT.md  CLEAN_DEPLOYMENT_GUIDE.md  CODE_ANALYSIS_REPORT.md  COMPLETE_SYSTEM_OVERVIEW.md  DELIVERY_CHECKLIST.md  DEPLOYMENT_FILES_LIST.md  DEPLOYMENT_STRUCTURE.md  DEPLOY_IN_30_MINUTES.md  DEPLOY_NOW.md  DOCUMENTATION_INDEX.md  EXECUTIVE_SUMMARY.md  FEATURES.md  FINAL_DEPLOYMENT_PACKAGE.md  FREE_DEPLOYMENT_GUIDE.md  GITHUB_UPLOAD_GUIDE.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_GUIDE.md  LICENSE  MODULE_SUMMARY.md  MULTIMODE_FRAMEWORK_GUIDE.md  NEW_FEATURES_v9.md  NSE_BSE_INTEGRATION.md  PHASE_PLAN.md  PRODUCTION_DEPLOYMENT_GUIDE.md  Procfile  QUICK_REFERENCE_CARD.md  README.md  README_DEPLOYMENT.md  SETUP_DOWNLOADS.md  START_JARVIS.sh  (+55 more)
actions/: __init__.py  automation_agent.py  data_agent.py  rag_agent.py  system.py  vision_agent.py
agents/: __init__.py  critic_agent.py  evaluator_agent.py  executor_agent.py  multi_agent_orchestrator.py  planner_agent.py
ai_integration/: __init__.py  base.py  groq_handler.py
archive_deprecated/: BUILD_COMPLETE.md  JARVIS_BUILD_PLAN.md  JARVIS_BUILD_SUMMARY.md  PHASE_1_REPORT.md  PHASE_2_PLAN.md  PHASE_2_REPORT.md  PHASE_3_COMPLETION.md  PHASE_3_REPORT.md  PHASE_3_SUMMARY.md  PHASE_4_REPORT.md  PHASE_4_SUMMARY.md  PHASE_5_PLAN.md  PHASE_5_REPORT.md  PHASE_5_SUMMARY.md  PHASE_6_PLAN.md  (+13 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
(+239 files in other folders)
