[package]
name = "airis"
version = "2.0.0"
description = "Airis AI Assistant"
authors = ["Airis Team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.6", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
  "shell-open",
  "window-close",
  "window-hide",
  "window-show",
  "window-maximize",
  "window-minimize",
  "window-unmaximize",
  "window-unminimize",
  "window-start-dragging"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
